--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,18 +1,22 @@
 navbar_entries:
-  - title: website
-    url: https://www.cscc.edu/
+  - title: CSCC IT Certificates
+    url: https://www.cscc.edu/for-business/it-workforce-certificates/index.shtml
 
   - title: LinkedIn
-    url: https://www.linkedin.com/
+    url: https://www.linkedin.com/in/jcadams/
 
   - title: GitHub
-    url: https://github.com/
+    url: https://github.com/jadams100
 
 project_entries:
-  - title: Template 1
-    url: template-1-post
-    desc: This is an example project, template 1
+  - title: cscc_ada
+    url: https://github.com/ColumbusStateWorkforceInnovation/cscc_ada
+    desc: Applied Data Analytics - Jupyter Notebooks and Tableau course materials
 
-  - title: Template 2
-    url: template-2-post
-    desc: This is an example project, template 2
+  - title: scripting-with-python-exercises
+    url: https://github.com/ColumbusStateWorkforceInnovation/scripting-with-python-exercises
+    desc: Scripting with Python Exercises for student coding practice and real-time, automated feedback
+    
+  - title: surveyResults
+    url: https://github.com/jeremycadams/surveyResults
+    desc: A personal repository for simple survey results processing in Python and visualization in Tableau
