--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: A portfolio of my accomplishments at Columbus State Community Colle
 remote_theme: andrewfriend-cscc/moonwalk-cscc 
 
 theme_config:
-  appearance: "dark" # can be "light", "dark" or "auto"
+  appearance: "light" # can be "light", "dark" or "auto"
   appearance_toggle: true # if appearance can be switched by user
   back_home_text: "home.." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
